change BigO symbol in commands

--- a/backend/template.tex
+++ b/backend/template.tex
@@ -58,7 +58,7 @@
 % ============================================
 
 % Complexity notation
-\newcommand{\BigO}[1]{\mathcal{O}\left(#1\right)}
+\newcommand{\BigO}[1]{O\left(#1\right)}
 \newcommand{\BigOmega}[1]{\Omega\left(#1\right)}
 \newcommand{\BigTheta}[1]{\Theta\left(#1\right)}
 \newcommand{\LittleO}[1]{o\left(#1\right)}
